--- a/public_html/cambio_moneda.html
+++ b/public_html/cambio_moneda.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +9,8 @@
     <link rel="stylesheet" href="./bootstrap/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+    <!-- Comienzo del menu y baner -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -54,6 +53,8 @@
             </div>
         </div>
     </div>
+    <!-- Final del Menu y baner -->
+    <!-- Comienzo del main -->
     <div class="container-fluid">
         <div class="row" style="margin-top: 10px;">
             <div class="col">
@@ -61,6 +62,7 @@
             </div>
         </div>
         <div class="row" style="margin-bottom: 10px;">
+            <!--Inicio Sección Informativa de como convertir una divisa-->
             <div class="col-md-6">
                 <div class="row"> 
                     <div class="col-12">
@@ -214,6 +216,8 @@
                     </div>
                 </div>
             </div>
+            <!--Final Sección Informativa de como convertir una divisa-->
+            <!--Inicio Formulario de convertir divisa-->
             <div class="col-md-6">
                 <div class="row justify-content-center">
                     <div class="caja-convertidor">
@@ -299,8 +303,12 @@
                     </div>
                 </div>
             </div>
+            <!--Final Formulario de convertir divisa-->
         </div>
     </div>
+    <!-- Final del main -->
+    <!--Comienzo del Footer-->
+        <!--Comienzo Redes sociales-->
     <div class="row no-gutters">
         <div id="cc-background-footer-1" class="col">
                 <div class="col-md-8 cc-paragram-title cc-paragram-color1">
@@ -327,8 +335,8 @@
                 </div>
         </div>
     </div>
+        <!--Final Redes sociales-->
     <div id="cc-background-footer-2" class="row no-gutters cc-container-perfil">
-        
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información Corporativa</span>
@@ -354,7 +362,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información de Interés</span>
@@ -391,7 +398,7 @@
             </a>
         </div>
     </div>
+    <!--Final del Footer-->
     <script src="./js/javaScript.js"> </script>
 </body>
-
 </html>
