--- a/public_html/datos_guardar.html
+++ b/public_html/datos_guardar.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +13,8 @@
     <link rel="stylesheet" href="./bootstrap/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+    <!-- Comienzo del menu y baner -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -58,9 +57,12 @@
             </div>
         </div>
     </div>
+    <!-- Final del Menu y baner -->
+    <!-- Comienzo del main -->
     <div class="container-fluid" style="margin-top: 10px; margin-bottom: 10px;">
         <div class="row">
             <div class="col">
+                <!--Inicio Formulario de convertir divisa-->
                 <div class="caja-convertidor">
                     <form id="form_change_money" onsubmit="list_default(event)" class="form" method="post">
                         <div class="form-group mx-5">
@@ -137,9 +139,13 @@
                         </div>
                     </form>
                 </div>
+                <!--Final Formulario de convertir divisa-->
             </div> 
         </div>      
     </div>
+    <!-- Final del main -->
+    <!--Comienzo del Footer-->
+        <!--Comienzo Redes sociales-->
     <div class="row no-gutters">
         <div id="cc-background-footer-1" class="col">
                 <div class="col-md-8 cc-paragram-title cc-paragram-color1">
@@ -166,8 +172,8 @@
                 </div>
         </div>
     </div>
+        <!--Final Redes sociales-->
     <div id="cc-background-footer-2" class="row no-gutters cc-container-perfil">
-        
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información Corporativa</span>
@@ -193,7 +199,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información de Interés</span>
@@ -230,8 +235,7 @@
             </a>
         </div>
     </div>
+    <!--Final del Footer-->
     <script src="./js/javaScript_data.js"> </script>
 </body>
-
-
 </html>
