--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Comienzo del menu y baner -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item active">
@@ -58,6 +59,8 @@
             </div>
         </div>
     </div>
+    <!-- Final del Menu y baner -->
+    <!-- Comienzo del main -->
     <div class="container-fluid">
         <div class="row cc-img-inicio-count">
             <div class="col-md-6">
@@ -80,8 +83,10 @@
             </div>
             <div class="col-md-6"></div>
         </div>
-        
     </div>
+    <!-- Final del main -->
+    <!--Comienzo del Footer-->
+        <!--Comienzo Redes sociales-->
     <div class="row no-gutters">
         <div id="cc-background-footer-1" class="col">
                 <div class="col-md-8 cc-paragram-title cc-paragram-color1">
@@ -108,8 +113,8 @@
                 </div>
         </div>
     </div>
+        <!--Final Redes sociales-->
     <div id="cc-background-footer-2" class="row no-gutters cc-container-perfil">
-        
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información Corporativa</span>
@@ -135,7 +140,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="col-md-6 d-flex justify-content-center">
             <div>
                 <span class="cc-paragram-title">Información de Interés</span>
@@ -172,6 +176,7 @@
             </a>
         </div>
     </div>
+    <!--Final del Footer-->
     <script src="./js/javaScript.js"> </script>
 </body>
 
